exports[`InfoLightIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-InfoLightIcon"
  isBadge={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16">
  <path
    className="lucid-InfoLightIcon-background"
    d="M8,15c-3.859,0-7-3.141-7-7c0-3.86,3.141-7,7-7s7,3.14,7,7C15,11.859,11.859,15,8,15z" />
  <path
    className="lucid-InfoLightIcon-mark"
    d="M8,0C3.582,0,0,3.582,0,8s3.582,8,8,8s8-3.582,8-8S12.418,0,8,0z M8,15c-3.859,0-7-3.141-7-7 c0-3.86,3.141-7,7-7s7,3.14,7,7C15,11.859,11.859,15,8,15z M7,3h2v2H7V3z M7,6h2v7H7V6z" />
</Icon>
`;

exports[`InfoLightIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-InfoLightIcon lucid-InfoLightIcon-is-clickable"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16">
  <path
    className="lucid-InfoLightIcon-background"
    d="M8,15c-3.859,0-7-3.141-7-7c0-3.86,3.141-7,7-7s7,3.14,7,7C15,11.859,11.859,15,8,15z" />
  <path
    className="lucid-InfoLightIcon-mark"
    d="M8,0C3.582,0,0,3.582,0,8s3.582,8,8,8s8-3.582,8-8S12.418,0,8,0z M8,15c-3.859,0-7-3.141-7-7 c0-3.86,3.141-7,7-7s7,3.14,7,7C15,11.859,11.859,15,8,15z M7,3h2v2H7V3z M7,6h2v7H7V6z" />
</Icon>
`;

exports[`InfoLightIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-InfoLightIcon"
  isBadge={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16">
  <path
    className="lucid-InfoLightIcon-background"
    d="M8,15c-3.859,0-7-3.141-7-7c0-3.86,3.141-7,7-7s7,3.14,7,7C15,11.859,11.859,15,8,15z" />
  <path
    className="lucid-InfoLightIcon-mark lucid-InfoLightIcon-mark-is-disabled"
    d="M8,0C3.582,0,0,3.582,0,8s3.582,8,8,8s8-3.582,8-8S12.418,0,8,0z M8,15c-3.859,0-7-3.141-7-7 c0-3.86,3.141-7,7-7s7,3.14,7,7C15,11.859,11.859,15,8,15z M7,3h2v2H7V3z M7,6h2v7H7V6z" />
</Icon>
`;
